new alignment code

--- a/reduction/Align_and_Tweakreg.ipynb
+++ b/reduction/Align_and_Tweakreg.ipynb
@@ -132,14 +132,28 @@
    ],
    "source": [
     "for f in files:\n",
-    "    align_image = f.replace(\"_destreak.fits\", \"_align.fits\")\n",
-    "    shutil.copy(f, align_image)\n",
+    "    align_image = member['expname'].replace(\"_destreak.fits\", \"_align.fits\")\n",
+    "    shutil.copy(member['expname'], align_image)\n",
     "    offsets_tbl = Table.read('/orange/adamginsburg/jwst/cloudc/offsets/Offsets_JWST_Cloud_C.csv')\n",
-    "    row = offsets_tbl[f.split('/')[-1] == offsets_tbl['Filename_1']]\n",
+    "    row = offsets_tbl[member['expname'].split('/')[-1] == offsets_tbl['Filename_1']]\n",
     "    print('Running manual align.')\n",
-    "    xshift = float(row['xshift (arcsec)'])*u.arcsec\n",
-    "    yshift = float(row['yshift (arcsec)'])*u.arcsec\n",
-    "    align_fits = ImageModel(f)\n",
+    "    try:\n",
+    "        print('Running manual align.')\n",
+    "        xshift = float(row['xshift (arcsec)'])*u.arcsec\n",
+    "        yshift = float(row['yshift (arcsec)'])*u.arcsec\n",
+    "    except:\n",
+    "        print('Something went wrong with manual align, running default values.')\n",
+    "        visit = member['expname'].split('_')[0][-3:]\n",
+    "        if visit == '001':\n",
+    "            xshift = 8*u.arcsec\n",
+    "            yshift = -0.3*u.arcsec\n",
+    "        elif visit == '002':\n",
+    "            xshift = 3.9*u.arcsec\n",
+    "            yshift = 1*u.arcsec\n",
+    "        else:\n",
+    "            xshift = 0*u.arcsec\n",
+    "            yshift = 0*u.arcsec\n",
+    "    align_fits = ImageModel(member['expname'])\n",
     "    align_fits.meta.wcs = adjust_wcs(align_fits.meta.wcs, delta_ra = yshift, delta_dec = xshift)\n",
     "    align_fits.save(align_image)"
    ]
