--- a/reduction/Align_and_Tweakreg.ipynb
+++ b/reduction/Align_and_Tweakreg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "e3ac8b63-ed59-420e-a7f5-c7c256381e4c",
    "metadata": {
     "tags": []
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "7c92d03d-a9cc-4e96-ab2a-2bd54bbb28f5",
    "metadata": {
     "tags": []
@@ -108,7 +108,7 @@
        " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00001_nrcblong_destreak.fits']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "ed722bc5-4fda-455e-aae2-fe63326c92ef",
    "metadata": {
     "tags": []
@@ -140,13 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "aac9150d-2b41-4157-a7d2-8cc3a4296e31",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -210,7 +206,7 @@
        "      -0.132   -0.137      1.0      1.0  -1024.5 ... 0.043858720352531466 0.0002777777777777778 0.0002777777777777778 -0.02482983666666667 .. -266.5778194336028)>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "ea8a9c30-9a0c-4c87-a1c2-726ccc3548b0",
    "metadata": {
     "tags": []
@@ -237,7 +233,7 @@
        "    (266.59927065, -28.62643857)>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,22 +244,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "de7de914-f898-4669-acaf-f63e32a81cbf",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<SkyCoord (ICRS): (ra, dec) in deg\n",
-       "    (266.59935444, -28.62863301)>"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'wcs_new' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mwcs_new\u001b[49m\u001b[38;5;241m.\u001b[39mpixel_to_world(\u001b[38;5;241m50\u001b[39m, \u001b[38;5;241m50\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'wcs_new' is not defined"
+     ]
     }
    ],
    "source": [
@@ -272,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "3265d6ed-8e25-42d9-a1f1-1368be14a9b5",
    "metadata": {
     "tags": []
@@ -285,13 +281,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "c966cd5b-8b46-499c-900a-e9a60f803c13",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -346,16 +338,16 @@
        "\n",
        "    [20]: <SphericalToCartesian()>\n",
        "\n",
-       "    [21]: <RotationSequence3D(angles=[  -0.02482984,    0.13648678,  275.46206342,  -28.64416256, -266.57790277])>\n",
+       "    [21]: <RotationSequence3D(angles=[  -0.02482984,    0.13648678,  275.46206342,  -28.64305145, -266.57740277])>\n",
        "\n",
        "    [22]: <CartesianToSpherical()>\n",
        "Parameters:\n",
-       "    offset_0 offset_1 offset_2 offset_3 offset_4 ...      offset_17             factor_18             factor_19                       angles_21                 \n",
-       "    -------- -------- -------- -------- -------- ... -------------------- --------------------- --------------------- ------------------------------------------\n",
-       "      -0.132   -0.137      1.0      1.0  -1024.5 ... 0.043858720352531466 0.0002777777777777778 0.0002777777777777778 -0.02482983666666667 .. -266.5779027669362)>"
+       "    offset_0 offset_1 offset_2 offset_3 offset_4 ...      offset_17             factor_18             factor_19                        angles_21                 \n",
+       "    -------- -------- -------- -------- -------- ... -------------------- --------------------- --------------------- -------------------------------------------\n",
+       "      -0.132   -0.137      1.0      1.0  -1024.5 ... 0.043858720352531466 0.0002777777777777778 0.0002777777777777778 -0.02482983666666667 .. -266.57740276693613)>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "159aa00b-82c3-498b-a11a-9031ceb9034b",
    "metadata": {
     "tags": []
@@ -379,7 +371,7 @@
        "False"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "fdff90d7-5177-4083-bbd6-b77e52e0f90d",
    "metadata": {
     "tags": []
@@ -402,7 +394,7 @@
        "False"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,34 +404,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "e518fc00-cd3c-4f69-8d6d-9c54306d4c91",
+   "cell_type": "raw",
+   "id": "4349c921-91b4-4863-8852-7591d238f301",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002001_02201_00001_nrcblong_align.fits'"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "align_image = files[1].replace(\"_destreak.fits\", \"_align.fits\")\n",
-    "shutil.copy(f, align_image)\n",
-    "#fa = asdf.open(align_image)\n",
-    "#wcsobj = fa.tree['meta']['wcs']\n",
-    "#ww = adjust_wcs(wcsobj, delta_ra=yshift, delta_dec=xshift)\n",
-    "#tree = fa.tree\n",
-    "#tree['meta']['wcs'] = ww\n",
-    "#fa = asdf.fits_embed.AsdfInFits(align_fits, tree)   \n",
-    "\n",
+    "shutil.copy(f, align_image) \n",
     "\n",
     "af = stdatamodels.jwst.datamodels.open(align_image)\n",
     "meta = af['meta']\n",
@@ -451,35 +423,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7e1d2d1a-918b-40dd-b2c9-3b1033ae7cc5",
+   "execution_count": 7,
+   "id": "8cda24cd-5e95-4584-94fc-91413043cf3a",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": [
-    "ImageModel(align_image).meta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "88a6bef8-f763-4127-be82-e7b3adfb7712",
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00001_nrcblong_align.fits'"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-12-05 12:40:42,841 - stpipe - INFO - Something went wrong with manual align, running default values.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running manual align.\n",
+      "INFO: Something went wrong with manual align, running default values. [unknown]\n"
+     ]
     }
    ],
    "source": [
-    "align_image"
+    "filename = files[0]\n",
+    "align_image = filename.replace(\"_destreak.fits\", \"_align.fits\")\n",
+    "shutil.copy(filename, align_image)\n",
+    "offsets_tbl = Table.read('/orange/adamginsburg/jwst/cloudc/offsets/Offsets_JWST_Cloud_C.csv')\n",
+    "row = offsets_tbl[filename.split('/')[-1] == offsets_tbl['Filename_1']]\n",
+    "print('Running manual align.')\n",
+    "try:\n",
+    "    xshift = float(row['xshift (arcsec)'])*u.arcsec\n",
+    "    yshift = float(row['yshift (arcsec)'])*u.arcsec\n",
+    "except:\n",
+    "    log.info('Something went wrong with manual align, running default values.')\n",
+    "    visit = filename.split('_')[0][-3:]\n",
+    "    if visit == '001':\n",
+    "        xshift = 8*u.arcsec\n",
+    "        yshift = -0.3*u.arcsec\n",
+    "    elif visit == '002':\n",
+    "        xshift = 3.9*u.arcsec\n",
+    "        yshift = 1.5*u.arcsec\n",
+    "    else:\n",
+    "        xshift = 0*u.arcsec\n",
+    "        yshift = 0*u.arcsec\n",
+    "align_fits = ImageModel(align_image)\n",
+    "ww = adjust_wcs(align_fits.meta.wcs, delta_ra = yshift, delta_dec = xshift)\n",
+    "align_fits.meta.wcs = ww\n",
+    "align_fits.save(align_image)\n",
+    "align_fits = fits.open(align_image)\n",
+    "align_fits[1].header.update(ww.to_fits()[0])\n",
+    "align_fits.writeto(align_image, overwrite=True)\n",
+    "filename = align_image"
    ]
   },
   {
@@ -523,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "id": "d3e47a31-f389-4533-a147-9f79ef452d32",
    "metadata": {},
    "outputs": [
@@ -568,20 +563,55 @@
    ],
    "source": [
     "for f in files:\n",
-    "    align_image = f.replace(\"_destreak.fits\", \"_align.fits\")\n",
-    "    shutil.copy(f, align_image)\n",
+    "    filename = f\n",
+    "    align_image = filename.replace(\"_destreak.fits\", \"_align.fits\")\n",
+    "    shutil.copy(filename, align_image)\n",
     "    offsets_tbl = Table.read('/orange/adamginsburg/jwst/cloudc/offsets/Offsets_JWST_Cloud_C.csv')\n",
-    "    row = offsets_tbl[f.split('/')[-1] == offsets_tbl['Filename_1']]\n",
+    "    row = offsets_tbl[filename.split('/')[-1] == offsets_tbl['Filename_1']]\n",
     "    print('Running manual align.')\n",
-    "    xshift = float(row['xshift (arcsec)'])*u.arcsec\n",
-    "    yshift = float(row['yshift (arcsec)'])*u.arcsec\n",
+    "    try:\n",
+    "        xshift = float(row['xshift (arcsec)'])*u.arcsec\n",
+    "        yshift = float(row['yshift (arcsec)'])*u.arcsec\n",
+    "    except:\n",
+    "        log.info('Something went wrong with manual align, running default values.')\n",
+    "        visit = filename.split('_')[0][-3:]\n",
+    "        if visit == '001':\n",
+    "            xshift = 8*u.arcsec\n",
+    "            yshift = -0.3*u.arcsec\n",
+    "        elif visit == '002':\n",
+    "            xshift = 3.9*u.arcsec\n",
+    "            yshift = 1*u.arcsec\n",
+    "        else:\n",
+    "            xshift = 0*u.arcsec\n",
+    "            yshift = 0*u.arcsec\n",
     "    align_fits = ImageModel(align_image)\n",
-    "    ww = adjust_wcs(align_fits.meta.wcs, delta_ra = yshift, delta_dec = xshift)\n",
+    "    ww = adjust_wcs(align_fits.meta.wcs, delta_ra = yshift+0.6*u.arcsec, delta_dec = xshift)\n",
     "    align_fits.meta.wcs = ww\n",
     "    align_fits.save(align_image)\n",
     "    align_fits = fits.open(align_image)\n",
     "    align_fits[1].header.update(ww.to_fits()[0])\n",
-    "    align_fits.writeto(align_image, overwrite=True)"
+    "    align_fits.writeto(align_image, overwrite=True)\n",
+    "    #filename = align_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ff62fc9c-5266-4f1e-ab5f-370bebdfaff8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('done')"
    ]
   },
   {
