--- a/notebooks/MedianFilterBackground_CloudC.ipynb
+++ b/notebooks/MedianFilterBackground_CloudC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "80c6ba4c-9f81-4afb-b5b3-82d117d542de",
    "metadata": {
     "tags": []
@@ -27,7 +27,7 @@
     "import regions\n",
     "from astropy import coordinates\n",
     "import PIL\n",
-    "from spectral_cube import SpectralCube, Projection, Slice\n",
+    "#from spectral_cube import SpectralCube, Projection, Slice\n",
     "from astropy import wcs\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import rgb_to_hsv, hsv_to_rgb\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "c1d1982f-00af-448e-aaba-737e22f56782",
    "metadata": {
     "tags": []
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "d14764cf-c1a5-417f-b1f0-5a220bb286f1",
    "metadata": {
     "tags": []
@@ -467,7 +467,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
+   "id": "a502885a-eb24-4045-b0fc-e2a84804441b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/blue/adamginsburg/adamginsburg/jwst/cloudc/reduction/brick-jwst-2221/reduction\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /orange/adamginsburg/jwst/cloudc/reduction/brick-jwst-2221/reduction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "19908d52-6558-4a81-8888-74a4488027cd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from destreak import compute_zero_spacing_approximation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "93bb2fe7-04c6-45a0-b87f-0209f5c489d6",
    "metadata": {},
    "outputs": [
@@ -475,13 +507,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged_realigned-to-vvv_i2d.fits\n"
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d.fits\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aaf2c28c03204e329b2b801fce8dbf7a",
+       "model_id": "f3bd26be42f646b5aa22596ce7919d02",
        "version_major": 2,
        "version_minor": 0
       },
@@ -496,13 +528,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged_realigned-to-vvv_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged_realigned-to-vvv_i2d_medfilt128.fits\n"
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d_medfilt128.fits\n",
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d.fits\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1ab11fce5b2d47feb51cc8885041ea03",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/41 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d_medfilt128.fits\n",
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d.fits\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "71fe7a921d9840248c03e5c7818424be",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/41 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d_medfilt128.fits\n"
      ]
     }
    ],
    "source": [
-    "for fn in glob.glob(f'{basepath}/images/jw02221-o002_t001_nircam_*_i2d.fits'):\n",
+    "for fn in glob.glob(f'{basepath}/images/jw02221-o002_t001_nircam_*nodestreak_i2d.fits'):\n",
     "    print(fn)\n",
     "    with warnings.catch_warnings():\n",
     "        # specifically ignoring that we're using non-integer \n",
