--- a/reduction/Align_and_Tweakreg.ipynb
+++ b/reduction/Align_and_Tweakreg.ipynb
@@ -935,13 +935,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c4620c5b-b8fc-42ae-9af5-ce6bcb47bb23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'jw02221002002_08201_00003_nrcblong_cal.fits'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "jw02221002002_10201_00001_nrc"
+    "st = 'jw02221002002_08201_00003_nrcblong_cal.fits'\n",
+    "st"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e855558c-c642-48e4-992e-56ea8864f1bb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'jw02221002002_08201_00003_nrcblong_cal.fits'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st.replace('_cal.fits', '_test.fits')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8202d277-4f0e-4a1b-9c78-74ab81dd8ea2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60243c3f-3c83-4390-b5d6-067455bd3968",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
