--- a/notebooks/MedianFilterBackground_CloudC.ipynb
+++ b/notebooks/MedianFilterBackground_CloudC.ipynb
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 68,
    "id": "a502885a-eb24-4045-b0fc-e2a84804441b",
    "metadata": {
     "tags": []
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "id": "19908d52-6558-4a81-8888-74a4488027cd",
    "metadata": {
     "tags": []
@@ -649,7 +649,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "id": "5cfb940b-2bf7-4f62-8fd2-4d631b2e31d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "id": "93bb2fe7-04c6-45a0-b87f-0209f5c489d6",
    "metadata": {},
    "outputs": [
@@ -661,71 +669,15 @@
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3bd26be42f646b5aa22596ce7919d02",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/41 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d_medfilt128.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d.fits\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ab11fce5b2d47feb51cc8885041ea03",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/41 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d_medfilt128.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d.fits\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71fe7a921d9840248c03e5c7818424be",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/41 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d_medfilt128.fits\n"
+     "ename": "NameError",
+     "evalue": "name 'scipy' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[70], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m sl \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlong\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mf4\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m fn \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mshort\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      8\u001b[0m regs \u001b[38;5;241m=\u001b[39m regions\u001b[38;5;241m.\u001b[39mRegions\u001b[38;5;241m.\u001b[39mread(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbasepath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/regions_/bright_stars_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.reg\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m tp \u001b[38;5;241m=\u001b[39m \u001b[43mcompute_zero_spacing_approximation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mext\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mregs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mregs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpercentile\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprogressbar\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtqdm\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m#if np.nanpercentile(tp.data, 10) < 0:\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m#    print(np.nanpercentile(tp.data, 10))\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m#    tp.data -= np.nanpercentile(tp.data, 10)\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m#tp.data[tp.data<0] = 0\u001b[39;00m\n\u001b[1;32m     14\u001b[0m tp\u001b[38;5;241m.\u001b[39mwriteto(fn\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_i2d.fits\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_i2d_medfilt\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdx\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.fits\u001b[39m\u001b[38;5;124m\"\u001b[39m), overwrite\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m/blue/adamginsburg/adamginsburg/jwst/cloudc/reduction/brick-jwst-2221/reduction/destreak.py:67\u001b[0m, in \u001b[0;36mcompute_zero_spacing_approximation\u001b[0;34m(filename, ext, dx, smooth, percentile, regs, progressbar)\u001b[0m\n\u001b[1;32m     65\u001b[0m     y, x \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmgrid[:dx, :dx]\n\u001b[1;32m     66\u001b[0m     circle \u001b[38;5;241m=\u001b[39m (x\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m+\u001b[39m y\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m<\u001b[39m dx\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m\n\u001b[0;32m---> 67\u001b[0m     arr \u001b[38;5;241m=\u001b[39m \u001b[43mscipy\u001b[49m\u001b[38;5;241m.\u001b[39mndimage\u001b[38;5;241m.\u001b[39mpercentile_filter(img, percentile,\n\u001b[1;32m     68\u001b[0m                                           \u001b[38;5;66;03m#size=(dx, dx),\u001b[39;00m\n\u001b[1;32m     69\u001b[0m                                           footprint\u001b[38;5;241m=\u001b[39mcircle,\n\u001b[1;32m     70\u001b[0m                                           mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mreflect\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     71\u001b[0m                                          )\n\u001b[1;32m     72\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fits\u001b[38;5;241m.\u001b[39mPrimaryHDU(data\u001b[38;5;241m=\u001b[39marr, header\u001b[38;5;241m=\u001b[39mheader)\n\u001b[1;32m     73\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     74\u001b[0m     \u001b[38;5;66;03m# the bottom-left pixel will be centered at (dx/2 + 1) in FITS coordinates if we start at 0\u001b[39;00m\n\u001b[1;32m     75\u001b[0m     \u001b[38;5;66;03m# so we start at -dx/4 so that the bottom-left pixel is centered at 1,1\u001b[39;00m\n\u001b[1;32m     76\u001b[0m     \u001b[38;5;66;03m# (BLC of image is at -0.5, -0.5 in FITS, pixel size is dx/2, so offset is dx/4)\u001b[39;00m\n\u001b[1;32m     77\u001b[0m     \u001b[38;5;66;03m# we don't want to wrap, so we use max(pixel, 0)\u001b[39;00m\n\u001b[1;32m     78\u001b[0m     \u001b[38;5;66;03m# the percentile will be over a smaller region, but that should be OK\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'scipy' is not defined"
      ]
     }
    ],
