--- a/notebooks/MedianFilterBackground_CloudC.ipynb
+++ b/notebooks/MedianFilterBackground_CloudC.ipynb
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "9783eda6-838c-48a3-827f-db5309d90664",
    "metadata": {
     "tags": []
@@ -584,12 +584,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/orange/adamginsburg/jwst/cloudc/images/jw02221-o002_t001_nircam_clear-f405n-merged_realigned-to-vvv_i2d.fits\n"
+      "/orange/adamginsburg/jwst/cloudc/images/jw02221-o002_t001_nircam_clear-f182m-merged-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc/images/jw02221-o002_t001_nircam_clear-f187n-merged-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc/images/jw02221-o002_t001_nircam_clear-f212n-merged-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc/images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc/images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc/images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d.fits\n"
      ]
     }
    ],
    "source": [
-    "ls /orange/adamginsburg/jwst/cloudc/images/jw02221-o002_t001_nircam_*_i2d.fits"
+    "ls /orange/adamginsburg/jwst/cloudc/images/*nodestreak_i2d.fits"
    ]
   },
   {
@@ -659,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "93bb2fe7-04c6-45a0-b87f-0209f5c489d6",
    "metadata": {},
    "outputs": [
@@ -667,15 +672,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d_medfilt128.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d_medfilt128.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d_medfilt128.fits\n"
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d.fits\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m sl \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlong\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mf4\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m fn \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mshort\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      8\u001b[0m regs \u001b[38;5;241m=\u001b[39m regions\u001b[38;5;241m.\u001b[39mRegions\u001b[38;5;241m.\u001b[39mread(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbasepath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/regions_/bright_stars_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.reg\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m tp \u001b[38;5;241m=\u001b[39m \u001b[43mcompute_zero_spacing_approximation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mext\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mregs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mregs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpercentile\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprogressbar\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtqdm\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m#if np.nanpercentile(tp.data, 10) < 0:\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m#    print(np.nanpercentile(tp.data, 10))\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m#    tp.data -= np.nanpercentile(tp.data, 10)\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m#tp.data[tp.data<0] = 0\u001b[39;00m\n\u001b[1;32m     14\u001b[0m tp\u001b[38;5;241m.\u001b[39mwriteto(fn\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_i2d.fits\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_i2d_medfilt\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdx\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.fits\u001b[39m\u001b[38;5;124m\"\u001b[39m), overwrite\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m/blue/adamginsburg/adamginsburg/jwst/cloudc/reduction/brick-jwst-2221/reduction/destreak.py:69\u001b[0m, in \u001b[0;36mcompute_zero_spacing_approximation\u001b[0;34m(filename, ext, dx, smooth, percentile, regs, progressbar)\u001b[0m\n\u001b[1;32m     67\u001b[0m     y, x \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmgrid[:dx, :dx]\n\u001b[1;32m     68\u001b[0m     circle \u001b[38;5;241m=\u001b[39m (x\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m+\u001b[39m y\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m<\u001b[39m dx\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m\n\u001b[0;32m---> 69\u001b[0m     arr \u001b[38;5;241m=\u001b[39m \u001b[43mscipy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mndimage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpercentile_filter\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpercentile\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     70\u001b[0m \u001b[43m                                          \u001b[49m\u001b[38;5;66;43;03m#size=(dx, dx),\u001b[39;49;00m\n\u001b[1;32m     71\u001b[0m \u001b[43m                                          \u001b[49m\u001b[43mfootprint\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcircle\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     72\u001b[0m \u001b[43m                                          \u001b[49m\u001b[43mmode\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mreflect\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     73\u001b[0m \u001b[43m                                         \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     74\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fits\u001b[38;5;241m.\u001b[39mPrimaryHDU(data\u001b[38;5;241m=\u001b[39marr, header\u001b[38;5;241m=\u001b[39mheader)\n\u001b[1;32m     75\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     76\u001b[0m     \u001b[38;5;66;03m# the bottom-left pixel will be centered at (dx/2 + 1) in FITS coordinates if we start at 0\u001b[39;00m\n\u001b[1;32m     77\u001b[0m     \u001b[38;5;66;03m# so we start at -dx/4 so that the bottom-left pixel is centered at 1,1\u001b[39;00m\n\u001b[1;32m     78\u001b[0m     \u001b[38;5;66;03m# (BLC of image is at -0.5, -0.5 in FITS, pixel size is dx/2, so offset is dx/4)\u001b[39;00m\n\u001b[1;32m     79\u001b[0m     \u001b[38;5;66;03m# we don't want to wrap, so we use max(pixel, 0)\u001b[39;00m\n\u001b[1;32m     80\u001b[0m     \u001b[38;5;66;03m# the percentile will be over a smaller region, but that should be OK\u001b[39;00m\n",
+      "File \u001b[0;32m/blue/adamginsburg/adamginsburg/miniconda3/envs/python39savannah/lib/python3.9/site-packages/scipy/ndimage/_filters.py:1439\u001b[0m, in \u001b[0;36mpercentile_filter\u001b[0;34m(input, percentile, size, footprint, output, mode, cval, origin)\u001b[0m\n\u001b[1;32m   1403\u001b[0m \u001b[38;5;129m@_ni_docstrings\u001b[39m\u001b[38;5;241m.\u001b[39mdocfiller\n\u001b[1;32m   1404\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpercentile_filter\u001b[39m(\u001b[38;5;28minput\u001b[39m, percentile, size\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, footprint\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m   1405\u001b[0m                       output\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreflect\u001b[39m\u001b[38;5;124m\"\u001b[39m, cval\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.0\u001b[39m, origin\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m):\n\u001b[1;32m   1406\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Calculate a multidimensional percentile filter.\u001b[39;00m\n\u001b[1;32m   1407\u001b[0m \n\u001b[1;32m   1408\u001b[0m \u001b[38;5;124;03m    Parameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1437\u001b[0m \u001b[38;5;124;03m    >>> plt.show()\u001b[39;00m\n\u001b[1;32m   1438\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 1439\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_rank_filter\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpercentile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfootprint\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1440\u001b[0m \u001b[43m                        \u001b[49m\u001b[43mcval\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morigin\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpercentile\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/blue/adamginsburg/adamginsburg/miniconda3/envs/python39savannah/lib/python3.9/site-packages/scipy/ndimage/_filters.py:1306\u001b[0m, in \u001b[0;36m_rank_filter\u001b[0;34m(input, rank, size, footprint, output, mode, cval, origin, operation)\u001b[0m\n\u001b[1;32m   1302\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[1;32m   1303\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mA sequence of modes is not supported by non-separable rank \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1304\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfilters\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   1305\u001b[0m mode \u001b[38;5;241m=\u001b[39m _ni_support\u001b[38;5;241m.\u001b[39m_extend_mode_to_code(mode)\n\u001b[0;32m-> 1306\u001b[0m \u001b[43m_nd_image\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrank_filter\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrank\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfootprint\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcval\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1307\u001b[0m \u001b[43m                      \u001b[49m\u001b[43morigins\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1308\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m temp_needed:\n\u001b[1;32m   1309\u001b[0m     temp[\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m] \u001b[38;5;241m=\u001b[39m output\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -700,28 +711,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b8f41d16-84e2-4fc4-a581-4f86b0ea11b8",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d_nomask-medfilt128.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d_nomask-medfilt128.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d_nomask-medfilt128.fits\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for fn in glob.glob(f'{basepath}/images/jw02221-o002_t001_nircam_*nodestreak_i2d.fits'):\n",
     "    print(fn)\n",
@@ -766,86 +761,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b4d22cf2-2cdc-4330-97b7-2b8e6c07a6c2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d.fits\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a2b5b039ce4410dbbf810494131a485",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/41 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d_chunk-medfilt128.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d.fits\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "777fe5528b4b413183c3d531daed667a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/41 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d_chunk-medfilt128.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d.fits\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51fbc031e51f4f34b14c89e46dedc323",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/41 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d.fits\n",
-      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d_chunk-medfilt128.fits\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for fn in glob.glob(f'{basepath}/images/jw02221-o002_t001_nircam_*nodestreak_i2d.fits'):\n",
     "    print(fn)\n",
