--- a/notebooks/MedianFilterBackground_CloudC.ipynb
+++ b/notebooks/MedianFilterBackground_CloudC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "80c6ba4c-9f81-4afb-b5b3-82d117d542de",
    "metadata": {
     "tags": []
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "c1d1982f-00af-448e-aaba-737e22f56782",
    "metadata": {
     "tags": []
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "d14764cf-c1a5-417f-b1f0-5a220bb286f1",
    "metadata": {
     "tags": []
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "a502885a-eb24-4045-b0fc-e2a84804441b",
    "metadata": {
     "tags": []
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "19908d52-6558-4a81-8888-74a4488027cd",
    "metadata": {
     "tags": []
@@ -761,10 +761,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b4d22cf2-2cdc-4330-97b7-2b8e6c07a6c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d.fits\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4fe99da1bc7b4b4ead79386e40588eda",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/41 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d_chunk-medfilt128.fits\n",
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d.fits\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5db5a05ee0c54aa1b37a42e48aa3a607",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/41 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d_chunk-medfilt128.fits\n",
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f182m-merged-reproject-nodestreak_i2d.fits\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ad78ddabd63b496a8c7c7c789ee17c76",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/133 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f182m-merged-reproject-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f182m-merged-reproject-nodestreak_i2d_chunk-medfilt256.fits\n",
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f187n-merged-reproject-nodestreak_i2d.fits\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c960cf5861d74fd18775ed33d7873e59",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/133 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f187n-merged-reproject-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f187n-merged-reproject-nodestreak_i2d_chunk-medfilt256.fits\n",
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f212n-merged-reproject-nodestreak_i2d.fits\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "95df37dd53ce41fb95461a2abca5c695",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/133 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f212n-merged-reproject-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f212n-merged-reproject-nodestreak_i2d_chunk-medfilt256.fits\n",
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d.fits\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bc5af89a27e24e328da95f798b148237",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/41 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc//images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d_chunk-medfilt128.fits\n"
+     ]
+    }
+   ],
    "source": [
     "for fn in glob.glob(f'{basepath}/images/jw02221-o002_t001_nircam_*nodestreak_i2d.fits'):\n",
     "    print(fn)\n",
@@ -786,8 +931,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e6c3029f-4f4f-427d-8eda-58aeecf5d480",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/orange/adamginsburg/jwst/cloudc/images/jw02221-o002_t001_nircam_clear-f182m-merged-reproject-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc/images/jw02221-o002_t001_nircam_clear-f187n-merged-reproject-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc/images/jw02221-o002_t001_nircam_clear-f212n-merged-reproject-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc/images/jw02221-o002_t001_nircam_clear-f405n-merged-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc/images/jw02221-o002_t001_nircam_clear-f410m-merged-nodestreak_i2d.fits\n",
+      "/orange/adamginsburg/jwst/cloudc/images/jw02221-o002_t001_nircam_clear-f466n-merged-nodestreak_i2d.fits\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls /orange/adamginsburg/jwst/cloudc/images/jw02221-o002_t001_nircam_*nodestreak_i2d.fits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "186f699a-ec5a-44c9-a763-42b6ebd33bbb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'log' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mlog\u001b[49m\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'log' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "log.info('test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8877f34e-8ad1-4686-a338-05905929e3ff",
    "metadata": {},
    "outputs": [],
    "source": []
