make 3 color spitzer image

--- a/notebooks/colorcolor_CloudC.ipynb
+++ b/notebooks/colorcolor_CloudC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8fda9fa5-9489-4850-9f3b-34f9f0318aec",
    "metadata": {
     "tags": []
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "0f058cd5-f998-4a7d-904b-d0aff04ec7fe",
    "metadata": {
     "tags": []
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c0912fe0-2eaf-429f-ae8f-5dc47233eba7",
    "metadata": {
     "tags": []
@@ -215,6 +215,10 @@
    "execution_count": 6,
    "id": "2badb952-a04f-4313-860f-3e5bc6340052",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -237,6 +241,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "15a0515e-ca0b-4eb7-9b56-1c8d460748dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b44c77ae-850d-4f4e-87c0-309b79ac2fdb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af661072-bb5d-45d0-b62d-0ad403b8fd0a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7a6b38c-bbd7-4df4-8343-cc5948527db1",
    "metadata": {},
    "outputs": [],
    "source": []
