make example color-color diagrams?

--- a/notebooks/colorcolor_CloudC.ipynb
+++ b/notebooks/colorcolor_CloudC.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c0912fe0-2eaf-429f-ae8f-5dc47233eba7",
    "metadata": {
     "tags": []
@@ -239,11 +239,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "15a0515e-ca0b-4eb7-9b56-1c8d460748dc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('test')"
+   ]
   },
   {
    "cell_type": "code",
