--- a/notebooks/three_color_cloudc.ipynb
+++ b/notebooks/three_color_cloudc.ipynb
@@ -33,6 +33,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d76c0830-3583-4ab1-8038-3841ef221635",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 166,
    "id": "3cdea38f-c39b-4911-a8ae-60386dd90699",
    "metadata": {
