working on MIRI alignment

--- a/notebooks/miri_PM_cloudc.ipynb
+++ b/notebooks/miri_PM_cloudc.ipynb
@@ -36,6 +36,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8d85628a-419d-4d36-a9ba-464eeb583007",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "basepath = '/orange/adamginsburg/jwst/cloudc/'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6edbb55c-8ee8-4fe1-8666-1749f10d9e8e",
    "metadata": {
@@ -257,7 +269,6 @@
    "cell_type": "markdown",
    "id": "338d1b70-b618-47a3-b9d3-b6d5148aa5ea",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -355,7 +366,9 @@
   {
    "cell_type": "markdown",
    "id": "9afa1e2a-3d1c-4214-a877-6386ab06c8ab",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Miri Real Sources"
    ]
@@ -593,14 +606,14 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f94b45d9-5f36-48aa-acaf-3ee2c3c06bfb",
+   "cell_type": "markdown",
+   "id": "488b7215-e371-4709-937f-ebd0d1c52a87",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## VVV Catlog"
+   ]
   },
   {
    "cell_type": "code",
@@ -707,6 +720,14 @@
     "ax = plt.subplot(111, projection=WCS(mir['SCI'].header))\n",
     "ax.imshow(mir['SCI'].data, cmap='inferno', vmin=850, vmax=1000)\n",
     "ax.scatter(masked_vvv.ra, masked_vvv.dec, edgecolor='cyan', facecolor='none', transform=ax.get_transform('world'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6036469-ffa5-4777-af64-a12e3a588377",
+   "metadata": {},
+   "source": [
+    "## NIRCam Catalog"
    ]
   },
   {
@@ -1597,8 +1618,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "1d83a454-ba2d-4612-9275-667bc36feccd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e8f0acf9-84a3-40ec-ab22-5d5176660156",
+   "id": "2c7ac3f2-780e-4804-aa52-3a93da72517d",
    "metadata": {},
    "outputs": [],
    "source": []
