--- a/notebooks/CatalogComparePositions.ipynb
+++ b/notebooks/CatalogComparePositions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "d718af3f-4933-41cb-8754-44aa6a41cfa7",
    "metadata": {
     "tags": []
@@ -24,6 +24,7 @@
     "from astropy.io import ascii, fits\n",
     "from astropy.wcs import WCS\n",
     "from astropy import wcs\n",
+    "import reproject\n",
     "from astropy.coordinates import SkyCoord\n",
     "from astropy.utils.data import download_file\n",
     "from astropy.visualization import ImageNormalize, ManualInterval, LogStretch, LinearStretch\n",
@@ -809,7 +810,60 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3fdac0b-03ec-4df0-a357-fc035a017005",
+   "id": "203a95eb-96d7-45d9-91c1-0298a85ad9f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb50e26e-7998-4459-9dac-f531bbf1587e",
+   "metadata": {},
+   "source": [
+    "# Reproject for Tricolor"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "655d60f3-268c-4d3f-8ec8-fd7595103744",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "mir_fn = '/orange/adamginsburg/jwst/cloudc/F2550W/pipeline/jw02221-o001_t001_miri_f2550w_i2d.fits'\n",
+    "mir_fn_realigned = mir_fn.replace('_i2d.fits', '_realigned-to-refcat.fits')\n",
+    "mir_file = fits.open(mir_fn_realigned)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "8cb511ae-19f9-4411-a39c-d66e86b8eac4",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "fn_405 = '/orange/adamginsburg/jwst/cloudc/images/F405_reproj_merged-fortricolor.fits'\n",
+    "head_405 = fits.getheader(fn_405)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "cc0d7c84-9b87-4eff-9fcb-6b3fc49793fb",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "f2550reprj_withstars, _ = reproject.reproject_interp(mir_file['SCI'], head_405)\n",
+    "(fits.PrimaryHDU(data=f2550reprj_withstars,\n",
+    "                 header=head_405)\n",
+    " .writeto(f'{basepath}/images/F2550_reproj-fortricolor.fits', overwrite=True)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27a8db8b-a73d-456a-aee2-22f5a73d2f2b",
    "metadata": {},
    "outputs": [],
    "source": []
