photmetry and figures

--- a/notebooks/Outflow_Moments.ipynb
+++ b/notebooks/Outflow_Moments.ipynb
@@ -214,7 +214,7 @@
    "id": "b66a3e03-50fc-49c3-aff1-19fdc0daaff0",
    "metadata": {},
    "source": [
-    "## SiO 2-1 Subcubes"
+    "# SiO 2-1 Subcubes"
    ]
   },
   {
@@ -303,36 +303,187 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99108772-b6e6-4402-b277-1787f9c9cfa2",
+   "cell_type": "markdown",
+   "id": "ec02b23e-e871-4dcf-9bc1-22217071942f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Centered on -55 km/s"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4c3dd885-dcd1-4435-9ff8-8026c7b6bfa9",
-   "metadata": {},
+   "execution_count": 2,
+   "id": "72dff787-97e9-4254-abe3-9d85d370cb04",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "fn_SiO_21 = '/orange/adamginsburg/ACES/rawdata/2021.1.00172.L/science_goal.uid___A001_X1590_X30a8/group.uid___A001_X1590_X30a9/member.uid___A001_X15a0_X1a8/calibrated/working/uid___A001_X15a0_X1a8.s38_0.Sgr_A_star_sci.spw27.cube.I.iter1.image.pbcor.fits'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "4f30b35a-5787-49f0-8285-bb843a74c1ef",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: StokesWarning: Cube is a Stokes cube, returning spectral cube for I component [spectral_cube.io.core]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cube_SiO_21 = SpectralCube.read(fn_SiO_21)\n",
+    "cube_SiO_21 = cube_SiO_21.with_spectral_unit(u.km/u.s, velocity_convention='radio', rest_value=86.84696*u.GHz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3113d6f0-c214-459a-8bb0-b272d6cb7664",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cube_lowv = cube_SiO_21.spectral_slab(-60*u.km/u.s, -55*u.km/u.s)\n",
+    "cube_lowv.write(f'/orange/adamginsburg/jwst/cloudc/alma/moments/cube_SiO_B3_n60_n55.fits', overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "df90112b-dde2-47b9-b9d8-22e89b81d1e2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "mom0_lowv = cube_lowv.moment0()\n",
+    "mom0_lowv.write(f'/orange/adamginsburg/jwst/cloudc/alma/moments/mom0_SiO_B3_n60_n55.fits', overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "7707ba79-e936-4911-833e-d928a08d0b62",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cube_highv = cube_SiO_21.spectral_slab(-55*u.km/u.s, -50*u.km/u.s)\n",
+    "cube_highv.write(f'/orange/adamginsburg/jwst/cloudc/alma/moments/cube_SiO_B3_n55_n50.fits', overwrite=True)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "44655887-f7f7-49e8-b1db-10138b4574aa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mom0_highv = cube_highv.moment0()\n",
+    "mom0_highv.write(f'/orange/adamginsburg/jwst/cloudc/alma/moments/mom0_SiO_B3_n55_n50.fits', overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89a4d949-c9c0-4a9f-b7e0-b3ed22436f51",
+   "metadata": {},
+   "source": [
+    "# CS 2-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "12632084-ed40-4742-87de-cf25fdda0488",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# CS 2-1\t97.98095\n",
+    "fn_CS_21 = '/orange/adamginsburg/ACES/rawdata/2021.1.00172.L/science_goal.uid___A001_X1590_X30a8/group.uid___A001_X1590_X30a9/member.uid___A001_X15a0_X1a8/calibrated/working/uid___A001_X15a0_X1a8.s38_0.Sgr_A_star_sci.spw33.cube.I.iter1.image.pbcor.fits'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "84659f61-74c3-4ea9-9c18-88ce6515a98e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: StokesWarning: Cube is a Stokes cube, returning spectral cube for I component [spectral_cube.io.core]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cube_CS_21 = SpectralCube.read(fn_CS_21)\n",
+    "cube_CS_21 = cube_CS_21.with_spectral_unit(u.km/u.s, velocity_convention='radio', rest_value=97.98095*u.GHz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e9992d39-ddf0-4c8a-9252-7a4851525eeb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cube_lowv = cube_CS_21.spectral_slab(-60*u.km/u.s, -55*u.km/u.s)\n",
+    "cube_lowv.write(f'/orange/adamginsburg/jwst/cloudc/alma/moments/cube_CS_B3_n60_n55.fits', overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "83c2e68c-705c-4bc4-bedb-3796754ab053",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "mom0_lowv = cube_lowv.moment0()\n",
+    "mom0_lowv.write(f'/orange/adamginsburg/jwst/cloudc/alma/moments/mom0_CS_B3_n60_n55.fits', overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "25f54112-ae89-460f-9f6d-e18bac2b5081",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cube_highv = cube_CS_21.spectral_slab(-55*u.km/u.s, -50*u.km/u.s)\n",
+    "cube_highv.write(f'/orange/adamginsburg/jwst/cloudc/alma/moments/cube_CS_B3_n55_n50.fits', overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f2d60ec1-487b-429d-8122-2c63f51723cb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "mom0_highv = cube_highv.moment0()\n",
+    "mom0_highv.write(f'/orange/adamginsburg/jwst/cloudc/alma/moments/mom0_CS_B3_n55_n50.fits', overwrite=True)"
+   ]
   },
   {
    "cell_type": "markdown",
