made a script to extract spectra

--- a/notebooks/cloudc_spectral_fitting.ipynb
+++ b/notebooks/cloudc_spectral_fitting.ipynb
@@ -4,37 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "g++ -std=c++11   -Ofast -fopenmp -DNDEBUG -DHAVE_INLINE -MMD -MP -fPIC   -c -o pwind_geom.o pwind_geom.cpp\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "In file included from pwind_geom.cpp:2:\n",
-      "pwind_util.H:9:10: fatal error: gsl/gsl_sf_erf.h: No such file or directory\n",
-      "    9 | #include <gsl/gsl_sf_erf.h>\n",
-      "      |          ^~~~~~~~~~~~~~~~~~\n",
-      "compilation terminated.\n",
-      "make: *** [<builtin>: pwind_geom.o] Error 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import pyspeckit \n",
+    "#import pyspeckit \n",
     "\n",
     "from astropy.io import fits\n",
     "from astropy.wcs import WCS\n",
@@ -62,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,72 +43,6 @@
     "rad_cloudc2 = 15*u.arcsec\n",
     "rad_cloudd = 30*u.arcsec\n",
     "rad_filament = 1.5*u.arcmin"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "File may have been truncated: actual file length (989520002880) is smaller than the expected size (989520004800)\n",
-      "Could not memory map array with mode='readonly', falling back to mode='denywrite', which means that the array will be read-only\n"
-     ]
-    }
-   ],
-   "source": [
-    "cube = SpectralCube.read('/orange/adamginsburg/ACES/mosaics/cubes/HNCO_7m12mTP_CubeMosaic.fits')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "This function (<function BaseSpectralCube.mean at 0x145e1be7b520>) requires loading the entire cube into memory and may therefore be slow.\n"
-     ]
-    }
-   ],
-   "source": [
-    "from spectral_cube import SpectralCube\n",
-    "from regions import CircleSkyRegion\n",
-    "\n",
-    "# Create a circular region around pos_cloudc1 with the given radius\n",
-    "circle_region = CircleSkyRegion(center=pos_cloudc1, radius=rad_cloudc1)\n",
-    "\n",
-    "# Extract the subcube around pos_cloudc1 with the given radius\n",
-    "subcube = cube.subcube_from_regions([circle_region], minimize=False)\n",
-    "\n",
-    "# Compute the average spectrum along the spectral axis\n",
-    "average_spectrum = subcube.mean(axis=(1, 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<CircleSkyRegion(center=<SkyCoord (ICRS): (ra, dec) in deg\n",
-       "    (266.58877028, -28.59253365)>, radius=15.0 arcsec)>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "plt.plot(average_spectrum)"
    ]
   },
   {
