--- a/notebooks/cloudc_spectral_fitting.ipynb
+++ b/notebooks/cloudc_spectral_fitting.ipynb
@@ -981,6 +981,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(6, 5))#, dpi=250)\n",
+    "ax = plt.subplot(111)\n",
+    "ax = plot_spectrum(spectrum_filament_co, label=r'$^{12}$CO 1-0', ax=ax)\n",
+    "#ax.set_xlim(left=-100, right=100)\n",
+    "ax.axvspan(-62, -50, color='gray', alpha=0.3, label='Filament')\n",
+    "ax.legend()\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "#plt.savefig('/orange/adamginsburg/jwst/cloudc/figures/filament_spectrum_12CO.pdf', bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
    "outputs": [],
